syntax = "proto3";

package jrapl;

option java_multiple_files = true;
option java_package = "jrapl";

import "google/protobuf/timestamp.proto";

message RaplReading {
  uint32 socket = 1;
  // energy value in joules
  double package = 2;
  double dram = 3;
  double core = 4;
  double gpu = 5;
}

// absolute energy consumption since boot
message RaplSample {
  google.protobuf.Timestamp timestamp = 1;
  repeated RaplReading reading = 2;
}

// relative energy consumption between readings of two energy samples
message RaplDifference {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
  repeated RaplReading reading = 3;
}
